<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Googlofeee</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name :</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped cream</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="address">Address :</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="contact_no">Contact No. :</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="email">Email :</string>



    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="make_order">Make Order</string>


    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="quantity">Quantity :</string>

    <!--
       Whipped cream topping for the order summary. It will be shown in the format of
       "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
     -->
    <string name="order_summary_whipped_cream">Whipped Cream?   <xliff:g example="  Yes" id="addWhippedCream">%b</xliff:g></string>


    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Chocolate?   <xliff:g example="  Yes" id="addChocolate">%b</xliff:g></string>

    <!--
          Quantity of coffee cups for the order summary. It will be shown in the format of
          "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
        -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: ₹10" where ₹10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g example="₹10" id="price">%s</xliff:g></string>

    <!--
       Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
       user's name. [CHAR LIMIT=NONE]
     -->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name_edit_text_view">%s</xliff:g></string>


    <!--
    Address for the order summary. It will be shown in the format of
     [CHAR LIMIT=NONE]
  -->
    <string name="order_summary_address">Address: <xliff:g example="Gujurati Pada" id="address">%s</xliff:g></string>

    <!--
    Contact no for the order summary. It will be shown in the format of
     [CHAR LIMIT=NONE]
  -->
    <string name="order_summary_contact_no">Contact No: <xliff:g example="9040200202" id="Contact No">%s</xliff:g></string>

    <!--
    Contact no for the order summary. It will be shown in the format of
     [CHAR LIMIT=NONE]
  -->
    <string name="order_summary_emailId">Email Id: <xliff:g example="9040200202" id="Email Id">%s</xliff:g></string>

    <!--
       Subject line for the order summary email. It will be in the format of
       "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
     -->
    <string name="order_summary_email_subject">Coffee order for <xliff:g example="Amy" id="name">%s</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>


</resources>