<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.googlofeee.ThirdPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="730dp"
        android:src="@drawable/f1"
        android:scaleType="centerCrop"
        android:alpha="0.4"
        />
    <TextView
        android:id="@+id/topping_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Topping :"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topping_text_view"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:text="@string/whipped_cream"
        android:paddingLeft="12dp"/>
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whipped_cream_checkbox"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="12dp"
        android:text="@string/chocolate"/>
    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_below="@id/chocolate_checkbox"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingLeft="12dp">

        <Button
            android:layout_width="40dp"
            android:background="#9c2c1b"
            android:layout_height="40dp"
            android:layout_marginTop="175dp"
            android:text="+"
            android:textColor="#F3F5F5F4"
            android:onClick="increment"/>
        <TextView
            android:id="@+id/update_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="175dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/minus_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="-"
            android:layout_marginTop="175dp"
            android:textSize="16sp"
            android:textColor="#F3F5F5F4"
            android:onClick="decrement"
            android:background="#9c2c1b"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/customer_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:paddingLeft="16dp"
        android:layout_marginTop="250dp"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/name_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customer_name_text_view"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:inputType="textCapWords"/>
    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_below="@id/name_edit_text_view"
        android:text="@string/address"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/address_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/address_text_view"
        android:inputType="textCapWords"/>
    <TextView
        android:id="@+id/contact_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_no"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="16dp"
        android:layout_below="@id/address_edit_text_view"
        android:paddingTop="16dp"/>
    <EditText
        android:id="@+id/contact_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/contact_text_view"
        android:layout_marginTop="8dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/contact_edit_text_view"/>
    <EditText
        android:id="@+id/emailId_edit_text_view"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text_view"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/make_order"
            android:textAllCaps="false"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="600dp"
            android:background="#9c2c1b"
            android:textColor="#F3F5F5F4"
            android:onClick="submitOrder"/>



    </LinearLayout>


</RelativeLayout>
</ScrollView>